--- a/styles/style.css
+++ b/styles/style.css
@@ -46,13 +46,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* margin: 102px auto 104px auto; */
   border: 2px solid var(--accent-color, #000000);
   font-family: var(--font-accent, sans-serif);
   text-align: center;
   background-color: var(--bg-color, #ffffff);
-  /* max-inline-size: 700px;
-  min-block-size: 364px; */
   min-height: 368px;
   margin: 0 368px 0 368px;
   margin-block: 100px;
@@ -125,6 +122,10 @@
   opacity: 0.6;
 }
 
+.theme-menu__button:focus-visible {
+  box-shadow: 2px 2px 0 var(--color-accent, rgb(0 0 0));
+}
+
 .theme-menu__button::after {
   content: "";
   position: absolute;
@@ -145,7 +146,7 @@
   flex-direction: column;
   justify-content: start;
   align-items: center;
-  gap: 47px;
+  gap: 50px;
   margin: 0;
   margin-block-end: 50px;
   padding: 0;
@@ -161,7 +162,7 @@
   align-items: center;
   border: 2px solid var(--accent-color, #000000);
   border-bottom: 0px;
-  padding: 4px 10px;
+  padding: 5px 10px;
   font-size: var(--main-font-size, 18px);
   font-variation-settings: "wght" var(--font-w-bold, 700);
 }
@@ -338,6 +339,7 @@
   justify-content: center;
   align-items: center;
   margin-block-end: 103px;
+  /* padding-top: 4px; */
 }
 
 .save-button {
@@ -394,7 +396,6 @@ dialog[open] {
   fill: var(--btn-text-color, #ffffff);
   inline-size: 39px;
   block-size: 39px;
-  mix-blend-mode: difference;
 }
 
 .dialog__text {
@@ -429,6 +430,18 @@ dialog[open] {
     padding-top: 120px;
   }
 
+  .content__post {
+    gap: 48px;
+  }
+
+  .card__poster-label {
+    margin-right: -15px;
+  }
+
+  .card__like-button {
+    padding: 8px 17px;
+  }
+
   .save-button {
     display: flex;
     flex-direction: column;
@@ -444,7 +457,16 @@ dialog[open] {
     block-size: 28px;
   }
 
+  dialog[open] {
+    padding-inline: 40px;
+    max-inline-size: 341px;
+  }
+
   .dialog__text {
     max-inline-size: 198px;
+  }
+  
+  .dialog__close-button {
+    inline-size: 257px;
   }
 }
