--- a/styles/style.css
+++ b/styles/style.css
@@ -51,30 +51,23 @@
   text-align: center;
   background-color: var(--bg-color, #ffffff);
   min-height: 368px;
-  margin: 0 368px 0 368px;
+  padding-block: clamp(7.5rem, 6.3462rem + 4.9231vw, 8.5rem) 24px;
+  max-width: 700px;
   margin-block: 100px;
-  
+  margin: 102px auto 100px auto;
+  text-transform: uppercase;
 }
 
 .header__logo {
   margin-block-end: 18px;
-  padding-top: 136px;
-  font-size: var(
-    --main-title-font-size,
-    clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem)
-  );
+  font-size: var(--main-title-font-size, clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem));
   text-align: center;
-  text-transform: uppercase;
 }
 
 .header__title {
   margin-block-end: 24px;
-  font-size: var(
-    --title-font-size,
-    clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem)
-  );
+  font-size: var(--title-font-size, clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem));
   text-align: center;
-  text-transform: uppercase;
 }
 
 .container {
@@ -98,23 +91,25 @@
   text-transform: uppercase;
   background-color: transparent;
   cursor: pointer;
-}
-
-.theme-menu__button:disabled {
-  pointer-events: none;
-}
-
-.theme-menu__button:disabled::before {
-  content: "▶";
-  position: absolute;
-  opacity: 0.6;
-  animation: switch-moving 0.5s infinite ease-in-out alternate;
-}
-
-.theme-menu__button:hover,
-.theme-menu__button:disabled {
-  opacity: 0.6;
+  appearance: none;
   transition: 0.3s ease;
+}
+
+.theme-menu__button::after {
+  content: "";
+  position: absolute;
+  background-color: var(--accent-color, #000000);
+  transition: 0.3s ease;
+  transform: scaleX(0);
+  transform-origin: top left;
+  block-size: 2px;
+  inline-size: 100%;
+  inset-block-end: -3px;
+  inset-inline-start: 0;
+}
+
+.theme-menu__button:hover {
+  opacity: 0.6;
 }
 
 .theme-menu__button:focus {
@@ -123,20 +118,35 @@
 }
 
 .theme-menu__button:focus-visible {
-  box-shadow: 2px 2px 0 var(--color-accent, rgb(0 0 0));
+  /* box-shadow: 2px 2px 0 var(--color-accent, rgb(0 0 0)); */
+  opacity: 0.6;
 }
 
-.theme-menu__button::after {
-  content: "";
+.theme-menu__button:focus-visible::after {
+  transform: scaleX(1);
+}
+
+.theme-menu__button:disabled {
+  position: relative;
+  opacity: 0.6;
+  pointer-events: none;
+}
+
+.theme-menu__button:disabled::before {
+  content: "▶";
   position: absolute;
-  background-color: var(--accent-color, #000000);
-  transition: 0.3s ease;
-  transform-origin: center left;
-  inline-size: 100%;
-  block-size: 2px;
-  inset-block-end: -1px;
-  inset-inline-start: 0;
-  scale: 0;
+  inset-inline-start: -20px;
+  animation: arrow 0.5s ease-in-out infinite alternate;
+
+  @keyframes arrow {
+    from {
+      inset-inline-start: -20px;
+    }
+
+    to {
+      inset-inline-start: -16px;
+    }
+  }
 }
 
 /*--------------CONTENT--------------*/
@@ -185,17 +195,19 @@
   position: absolute;
   z-index: 1;
   opacity: 0.5;
-  color: var(--accent-color, #000000);
+  /* color: var(--accent-color, #000000); */
   font-family: var(--font-accent), monospace;
   font-weight: 400;
   font-size: 14px;
   line-height: normal;
-  text-shadow: -1px 0 var(--accent-color, #000000),
-    0 1px var(--accent-color, #000000), 1px 0 var(--accent-color, #000000),
+  text-shadow: 
+    -1px 0 var(--bg-color, #ffffff),
+    1px 0 var(--bg-color, #ffffff), 
+    0 1px var(--bg-color, #ffffff),
     0 -1px var(--bg-color, #ffffff);
-  inset-block-start: 25px;
-  inset-inline-end: 25px;
-  mix-blend-mode: hard-light;
+  inset-inline-end: clamp(11px, -0.3221rem + 4.3077vw, 25px);
+  inset-block-start: clamp(23px, 1.2933rem + 0.6154vw, 25px);
+  mix-blend-mode: light;
 }
 
 @supports (
@@ -424,10 +436,6 @@ dialog[open] {
   .header {
     margin: 100px auto 100px auto;
     min-height: 326px;
-  }
-
-  .header__logo {
-    padding-top: 120px;
   }
 
   .content__post {
