--- a/styles/style.css
+++ b/styles/style.css
@@ -195,19 +195,17 @@
   position: absolute;
   z-index: 1;
   opacity: 0.5;
-  /* color: var(--accent-color, #000000); */
+  color: var(--accent-color, #000000);
   font-family: var(--font-accent), monospace;
-  font-weight: 400;
   font-size: 14px;
-  line-height: normal;
   text-shadow: 
-    -1px 0 var(--bg-color, #ffffff),
-    1px 0 var(--bg-color, #ffffff), 
-    0 1px var(--bg-color, #ffffff),
-    0 -1px var(--bg-color, #ffffff);
+    -1px 0 var(--accent-color, #000000),
+    1px 0 var(--accent-color, #000000), 
+    0 1px var(--accent-color, #000000),
+    0 -1px var(--accent-color, #000000);
   inset-inline-end: clamp(11px, -0.3221rem + 4.3077vw, 25px);
   inset-block-start: clamp(23px, 1.2933rem + 0.6154vw, 25px);
-  mix-blend-mode: light;
+  /* mix-blend-mode: light; */
 }
 
 @supports (
