--- a/styles/style.css
+++ b/styles/style.css
@@ -204,12 +204,13 @@
 @supports ( 
   (text-stroke: 1px var(--text-shadow-color)) or 
   (-webkit-text-stroke: 1px var(--text-shadow-color)) 
-) { 
-  .card__poster-label { 
-    text-shadow: none; 
-    -webkit-text-stroke: 1px var(--text-shadow-color); 
-    text-stroke: 1px var(--text-shadow-color); 
-  } 
+) 
+{ 
+.card__poster-label { 
+  text-shadow: none; 
+  -webkit-text-stroke: 1px var(--text-shadow-color); 
+  text-stroke: 1px var(--text-shadow-color); 
+} 
 }
 
 .card__content {
